Noticed slight vertical shift when placed inside a data table that was filtering rows, adding a min-height solved whatever was causing this issue.

--- a/BlazorBuilds.Components/Assets/Scss/_pager.scss
+++ b/BlazorBuilds.Components/Assets/Scss/_pager.scss
@@ -10,6 +10,7 @@
     gap: 1rem;
     font-size: var(--fs-label);
     color: var(--control-label-text-clr);
+    min-height: 3rem;
 
     & > *:only-child { //push buttons to the right when there is no information span
         margin-left: auto;
