--- a/BlazorBuilds.Components/wwwroot/assets/css/main.css
+++ b/BlazorBuilds.Components/wwwroot/assets/css/main.css
@@ -55,6 +55,7 @@
   gap: 1rem;
   font-size: var(--fs-label);
   color: var(--control-label-text-clr);
+  min-height: 3rem;
 }
 .pager > *:only-child {
   margin-left: auto;
